# isimple

./: .env.example  .gitignore  AUDIT.md  README.md  package.json  pnpm-lock.yaml  render.yaml  turbo.json  vercel.json
.claude/: settings.json
.github/workflows/: ci-agent.yml  ci-frontend.yml  ci-web.yml
app/: globals.css  layout.tsx  page.tsx
app/mentions-legales/: page.tsx
app/politique-confidentialite/: page.tsx
apps/agent/: openapi.json  pyproject.toml
apps/agent/scripts/: export_openapi.py
apps/agent/src/immosimple_agent/: main.py
apps/agent/src/immosimple_agent/graphs/: draft.py
apps/agent/src/immosimple_agent/models/: requests.py  responses.py
apps/agent/src/immosimple_agent/routes/: chat.py  classify.py  draft.py
apps/app/: middleware.ts  package.json
apps/web/: package.json
apps/web/app/: page.tsx
apps/web/components/: CookieBanner.tsx  Features.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Problem.tsx  WaitlistForm.tsx
backend/: .env.example  pyproject.toml  railway.json
backend/src/immosimple_agent/: main.py
components/: Analytics.tsx  Features.tsx  Footer.tsx  Founder.tsx  Hero.tsx  Nav.tsx  Pricing.tsx  Problem.tsx  WaitlistForm.tsx
design-reference/claude-design/: App.html  Document Review.html  Landing Page.html  Onboarding.html
docs/: DOCUMENT_PIPELINE.md
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/scripts/: gen-db-types.sh  seed.js
frontend/src/app/: globals.css  page.tsx  (+1 more)
frontend/supabase/: schema.sql
lib/: kv.ts  validations.ts
scripts/: gen-contracts.sh  gen-db-types.sh  seed.js
(+97 files in other folders)
